<resources>
    <string name="app_name">Howler</string>
    <string name="add_contacts">Emergency Contacts:</string>
    <string name="start_location">Start Location:</string>
    <string name="enter_start_location">enter start location</string>
    <string name="end_location_label">End Location:</string>
    <string name="enter_end_location">enter end location</string>
    <string name="time_label">Estimated Travel Time:</string>
    <string name="colon">:</string>
    <string name="zero">00</string>
    <string name="hours">hrs</string>
    <string name="minutes">mins</string>
    <string name="contact_prompt">Select a contact</string>
    <string name="start_tracking">Start Tracking!</string>
    <string name="mobile">Mobile</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="_1">+1</string>
    <string name="_6045268594">6045268594</string>
    <string name="contact_icon">contact icon</string>
    <string name="phone_icon">phone icon</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="username">Username</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_new_account">Create new account</string>
    <string name="full_name">Full name</string>
    <string name="phone_number_5551234567">Phone number (5551234567)</string>
    <string name="repeat_password">Repeat password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="resend_confirmation">Resend confirmation</string>
    <string name="new_password">New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_in">Sign In</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="end_location">End Location</string>
    <string name="estimated_travel_time">Estimated Travel Time</string>
    <string name="_00">00</string>
    <string name="start_timer">Start Timer</string>
    <string name="number">Number</string>
    <string name="sending_text_message_in">Sending Text Message in:</string>
    <string name="stop_timer">Stop Timer</string>
    <string name="add_time">Add Time</string>
    <string name="sec">sec</string>
    <string name="min">min : </string>
    <string name="hr">hr : </string>
    <string name="logo">logo</string>
    <string name="the_timer_has_finished">The Timer has finished.</string>
    <string name="you_have_stopped_the_timer">You have stopped the timer.</string>
    <string name="select_emergency_contact">Select Emergency Contact</string>
</resources>
