<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="@color/howler_grey"
    android:padding="@dimen/main_padding"
    tools:context="com.example.amanda.howler.com.howlersafe.howler.TrackingTimer">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/logo2"
            android:contentDescription="@string/logo" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView5"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="false"
            android:text="@string/sending_text_message_in"
            android:textColor="@color/ic_launcher_background"
            android:textSize="@dimen/label_text_size"
            tools:layout_editor_absoluteX="141dp"
            tools:layout_editor_absoluteY="54dp" />

        <RelativeLayout
            android:id="@+id/timerRL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleTextView"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/hourEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_00"
                android:textColor="@color/ic_launcher_background"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/colon1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/hourEditText"
                android:text="@string/hr"
                android:textColor="@color/ic_launcher_background"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/minTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/colon1"
                android:text="@string/_00"
                android:textColor="@color/ic_launcher_background"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/colon2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/minTextView"
                android:text="@string/min"
                android:textColor="@color/ic_launcher_background"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/secTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/colon2"
                android:text="@string/_00"
                android:textColor="@color/ic_launcher_background"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/secTextView"
                android:text="@string/sec"
                android:textColor="@color/ic_launcher_background"
                android:textSize="30sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/timerRL"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addTimeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/add_time"
                android:textAllCaps="false"
                android:textColor="@color/ic_launcher_background"
                android:textSize="18sp" />

            <Button
                android:id="@+id/stopTrackingButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/stop_timer"
                android:textAllCaps="false"
                android:textColor="@color/ic_launcher_background"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
