<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/howler_grey"
    android:padding="@dimen/main_padding"
    tools:context="com.example.amanda.howler.com.howlersafe.howler.EditContact">

    <LinearLayout
        android:id="@+id/personInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            app:srcCompat="@drawable/ic_contact" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/firstNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/ic_launcher_background"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textColor="@color/ic_launcher_background"
                android:textColorHint="@color/white_hint" />

            <EditText
                android:id="@+id/lastNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/ic_launcher_background"
                android:ems="10"
                android:hint="@string/surname"
                android:inputType="textPersonName"
                android:textColor="@color/ic_launcher_background"
                android:textColorHint="@color/white_hint" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contactInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/personInfo"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.005"
            app:srcCompat="@drawable/ic_local_phone_white_24dp"
            android:contentDescription="@string/contact_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/contactMobileTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/ic_launcher_background"
                android:text="@string/mobile"
                android:textColor="@color/ic_launcher_background"
                android:textColorHint="@color/ic_launcher_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_weight="10"
                    android:backgroundTint="@color/ic_launcher_background"
                    android:gravity="bottom"
                    android:text="@string/_1"
                    android:textColor="@color/ic_launcher_background"
                    android:textColorHint="@color/ic_launcher_background"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/mobileEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/ic_launcher_background"
                    android:ems="10"
                    android:hint="@string/_6045268594"
                    android:inputType="phone"
                    android:textColor="@color/ic_launcher_background"
                    android:textColorHint="@color/white_hint" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/saveContactButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/contactInfo"
        android:layout_marginTop="50dp"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_save_white_24dp" />

    <Button
        android:id="@+id/deleteContactButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contactInfo"
        android:layout_marginTop="50dp"
        android:background="@drawable/button"
        android:padding="10dp"
        android:text="@string/delete_contact"
        android:textColor="@color/ic_launcher_background" />
</RelativeLayout>
