<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/howler_grey"
    android:padding="@dimen/main_padding"
    tools:context="com.example.amanda.howler.com.howlersafe.howler.ViewContact">

    <TextView
        android:id="@+id/contactName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/ic_launcher_background"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contactName"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_weight="0.2"
            app:srcCompat="@drawable/ic_local_phone_white_24dp"
            android:contentDescription="@string/logo" />

        <TextView
            android:id="@+id/contactNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/number"
            android:textColor="@color/ic_launcher_background"
            android:textSize="24sp" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/editContactButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_edit_white_24dp" />

</RelativeLayout>
